# vetulus

./: .gitignore  .travis.yml  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  Makefile  README.md  build.ninja  docker-compose.yml  project_deps  vetulus-command-history
api/: CMakeLists.txt  api.cc  api.h  config.h  info.h  test_api.cc  vetulus_api.cc
config/: CMakeLists.txt  api.conf  config.cc  config.h  test_config.cc  vetulus.pc.in  vetulus_config.cc
config/files/: api.conf  manager_client.conf  proto_client.conf  stack_client.conf  stack_server.conf
manager/: CMakeLists.txt  config.h  dispatcher.h  manager_server.cc  process.h  proto_client.h  proto_loader.cc  proto_loader.h  proto_server.cc  test_dispatcher.cc  test_manager_server.cc  test_process.cc  test_proto_server.cc
protos/: dog.proto  service.proto  stack.proto
rpc/: CMakeLists.txt  Makefile  stack.proto  stack_client.cc  stack_server.cc
scripts/: compile.sh  install_deps.sh  install_googletest.sh  install_grpc.sh  install_pistache.sh  install_protobuf.sh  recompile.sh  run_docker.sh  run_proto_service.sh  run_stack_service.sh  run_tests.sh  test_proto_service.sh  test_stack_service.sh  travis_build.sh  welcome-message.txt
services/: stack_client.cc  stack_server.cc
services/stack/: CMakeLists.txt  Makefile  config.h  stack_client.cc  stack_client.h  stack_server.cc  test_stack_server.cc
workers/: CMakeLists.txt  CPPLINT.cfg  config.h  gate.cc  gate.h  pool.cc  pool.h
